finished JPMS setup to work with test and make JAR